--- a/index.html
+++ b/index.html
@@ -173,6 +173,20 @@
           </ul>
         </div>
       </section>
+      <!--Regular customers-->
+      <section>
+        <div class="conteiner">
+          <h2></h2>
+          <ul class="list">
+            <li class="meta"><a href=""></a></li>
+            <li class="meta"><a href=""></a></li>
+            <li class="meta"><a href=""></a></li>
+            <li class="meta"><a href=""></a></li>
+            <li class="meta"><a href=""></a></li>
+            <li class="meta"><a href=""></a></li>
+          </ul>
+        </div>
+      </section>
     </main>
     <!--Footer-->
     <footer class="footer">
