--- a/index.html
+++ b/index.html
@@ -172,9 +172,10 @@
             </li>
           </ul>
         </div>
-        <section>
+        <!--Regular customers-->
+        <section class="client">
           <div class="conteiner">
-            <h2></h2>
+            <h2 class="customers">Постійні клієнти</h2>
             <ul class="list">
               <li class="meta"><a href=""></a></li>
               <li class="meta"><a href=""></a></li>
