--- a/index.html
+++ b/index.html
@@ -174,15 +174,23 @@
         </div>
         <!--Regular customers-->
         <section class="client">
-          <div class="conteiner">
+          <div class="conteiner regular_conteiner">
             <h2 class="customers">Постійні клієнти</h2>
-            <ul class="list">
-              <li class="meta"><a href=""></a></li>
-              <li class="meta"><a href=""></a></li>
-              <li class="meta"><a href=""></a></li>
-              <li class="meta"><a href=""></a></li>
-              <li class="meta"><a href=""></a></li>
-              <li class="meta"><a href=""></a></li>
+            <ul class="list cust_link">
+              <li class="meta"><img class="cust_img" src="./img/client1.svg" alt="client1" width="41" /></li>
+              <li class="meta"><img class="cust_img" src="./img/client2.svg" alt="client2" width="41" /></li>
+              <li class="meta"><img class="cust_img" src="./img/client3.svg" alt="client3" width="41" /></li>
+              <li class="meta"><img class="cust_img" src="./img/client4.svg" alt="client4" width="84" /></li>
+              <li class="meta"><img class="cust_img" src="./img/client5.svg" alt="client5" width="84" /></li>
+              <li class="meta"><img class="cust_img" src="./img/client6.svg" alt="client6" width="84" /></li>
+            </ul>
+            <ul class="list cust_link">
+              <li class="meta"><a class="cust_img" href="./img/client1.svg"></a></li>
+              <li class="meta"><a class="cust_img" href="./img/client2.svg"></a></li>
+              <li class="meta"><a class="cust_img" href="./img/client3.svg"></a></li>
+              <li class="meta"><a class="cust_img" href="./img/client4.svg"></a></li>
+              <li class="meta"><a class="cust_img" href="./img/client5.svg"></a></li>
+              <li class="meta"><a class="cust_img" href="./img/client6.svg"></a></li>
             </ul>
           </div>
         </section>
