Пытаюсь сделать свг

--- a/index.html
+++ b/index.html
@@ -173,24 +173,52 @@
           </ul>
         </div>
         <!--Regular customers-->
-        <section class="client">
+        <section class="section client">
           <div class="conteiner regular_conteiner">
             <h2 class="customers">Постійні клієнти</h2>
             <ul class="list cust_link">
-              <li class="meta"><img class="cust_img" src="./img/client1.svg" alt="client1" width="41" /></li>
-              <li class="meta"><img class="cust_img" src="./img/client2.svg" alt="client2" width="41" /></li>
-              <li class="meta"><img class="cust_img" src="./img/client3.svg" alt="client3" width="41" /></li>
-              <li class="meta"><img class="cust_img" src="./img/client4.svg" alt="client4" width="84" /></li>
-              <li class="meta"><img class="cust_img" src="./img/client5.svg" alt="client5" width="84" /></li>
-              <li class="meta"><img class="cust_img" src="./img/client6.svg" alt="client6" width="84" /></li>
-            </ul>
-            <ul class="list cust_link">
-              <li class="meta"><a class="cust_img" href="./img/client1.svg"></a></li>
-              <li class="meta"><a class="cust_img" href="./img/client2.svg"></a></li>
-              <li class="meta"><a class="cust_img" href="./img/client3.svg"></a></li>
-              <li class="meta"><a class="cust_img" href="./img/client4.svg"></a></li>
-              <li class="meta"><a class="cust_img" href="./img/client5.svg"></a></li>
-              <li class="meta"><a class="cust_img" href="./img/client6.svg"></a></li>
+              <li>
+                <botton class="meta"
+                  ><svg class="icon">
+                    <use href="../img/symbol-defs.svg#icon-group-1"></use>
+                  </svg>
+                </botton>
+              </li>
+              <li>
+                <botton class="meta"
+                  ><svg class="icon">
+                    <use href="../img/symbol-defs.svg#icon-group-2"></use>
+                  </svg>
+                </botton>
+              </li>
+              <li>
+                <botton class="meta"
+                  ><svg class="icon">
+                    <use href="/img/symbol-defs.svg#icon--5"></use>
+                  </svg>
+                </botton>
+              </li>
+              <li>
+                <botton class="meta"
+                  ><svg class="icon">
+                    <use href="../img/symbol-defs.svg#icon-group-4"></use>
+                  </svg>
+                </botton>
+              </li>
+              <li>
+                <botton class="meta"
+                  ><svg class="icon">
+                    <use href="./img/symbol-defs.svg#icon-op-"></use>
+                  </svg>
+                </botton>
+              </li>
+              <li>
+                <botton class="meta"
+                  ><svg class="icon">
+                    <use href="./img/symbol-defs.svg#icon-Union"></use>
+                  </svg>
+                </botton>
+              </li>
             </ul>
           </div>
         </section>
