--- a/index.html
+++ b/index.html
@@ -187,14 +187,14 @@
               <li>
                 <botton class="meta"
                   ><svg class="icon">
-                    <use href="../img/symbol-defs.svg#icon-group-2"></use>
+                    <use a href="/img/symbol-defs.svg#icon--5"></use>
                   </svg>
                 </botton>
               </li>
               <li>
                 <botton class="meta"
-                  ><svg class="icon">
-                    <use href="/img/symbol-defs.svg#icon--5"></use>
+                  ><svg class="icon"> width=""
+                    <use href="/img/symbol-defs.svg#icon--5" width="120"></use>
                   </svg>
                 </botton>
               </li>
