--- a/index.html
+++ b/index.html
@@ -177,10 +177,11 @@
           <div class="conteiner regular_conteiner">
             <h2 class="customers">Постійні клієнти</h2>
             <ul class="list cust_link">
+              <li><button class="meta">peek me</button></li>
               <li>
                 <botton class="meta"
                   ><svg class="icon">
-                    <use href="../img/symbol-defs.svg#icon-group-1"></use>
+                    <use href="./img/symbol-defs.svg#icon-group-1"></use>
                   </svg>
                 </botton>
               </li>
@@ -193,15 +194,15 @@
               </li>
               <li>
                 <botton class="meta"
-                  ><svg class="icon"> width=""
-                    <use href="/img/symbol-defs.svg#icon--5" width="120"></use>
+                  ><svg class="icon">
+                    <use href="./img/icons.svg#icon-linkedin1"></use>
                   </svg>
                 </botton>
               </li>
               <li>
                 <botton class="meta"
                   ><svg class="icon">
-                    <use href="../img/symbol-defs.svg#icon-group-4"></use>
+                    <use href="./img/symbol-defs.svg#icon-Object-1"></use>
                   </svg>
                 </botton>
               </li>
