--- a/index.html
+++ b/index.html
@@ -177,48 +177,12 @@
           <div class="conteiner regular_conteiner">
             <h2 class="customers">Постійні клієнти</h2>
             <ul class="list cust_link">
-              <li><button class="meta">peek me</button></li>
-              <li>
-                <botton class="meta"
-                  ><svg class="icon">
-                    <use href="./img/symbol-defs.svg#icon-group-1"></use>
+              <li class="meta">
+                <a href="" class="icon">
+                  <svg>
+                    <use href="./img/symbol-defs.svg#icon-at-symbol"></use>
                   </svg>
-                </botton>
-              </li>
-              <li>
-                <botton class="meta"
-                  ><svg class="icon">
-                    <use a href="/img/symbol-defs.svg#icon--5"></use>
-                  </svg>
-                </botton>
-              </li>
-              <li>
-                <botton class="meta"
-                  ><svg class="icon">
-                    <use href="./img/icons.svg#icon-linkedin1"></use>
-                  </svg>
-                </botton>
-              </li>
-              <li>
-                <botton class="meta"
-                  ><svg class="icon">
-                    <use href="./img/symbol-defs.svg#icon-Object-1"></use>
-                  </svg>
-                </botton>
-              </li>
-              <li>
-                <botton class="meta"
-                  ><svg class="icon">
-                    <use href="./img/symbol-defs.svg#icon-op-"></use>
-                  </svg>
-                </botton>
-              </li>
-              <li>
-                <botton class="meta"
-                  ><svg class="icon">
-                    <use href="./img/symbol-defs.svg#icon-Union"></use>
-                  </svg>
-                </botton>
+                </a>
               </li>
             </ul>
           </div>
