--- a/portfolio.html
+++ b/portfolio.html
@@ -233,3 +233,60 @@
     </footer>
   </body>
 </html>
+
+
+
+
+
+
+<li>
+                <a href="">
+                  <svg class="icon">
+                    <use href="./img/symbol-defs.svg#icon-add-solid"></use>
+                  </svg>
+                </a>
+              </li>
+              <li>
+                <botton class="meta">
+                  <svg class="icon">
+                    <use href="./img/symbol-defs.svg#icon-add-solid"></use>
+                  </svg>
+                </botton>
+              </li>
+              <li>
+                <botton class="meta"
+                  ><svg class="icon">
+                    <use
+                      href="./img/symbol-defs.svg#icon-align-justified"
+                    ></use>
+                  </svg>
+                </botton>
+              </li>
+              <li>
+                <botton class="meta"
+                  ><svg class="icon">
+                    <use href="./img/sprite.svg#"></use>
+                  </svg>
+                </botton>
+              </li>
+              <li>
+                <botton class="meta"
+                  ><svg class="icon">
+                    <use href="./img/sprite.svg#"></use>
+                  </svg>
+                </botton>
+              </li>
+              <li>
+                <botton class="meta"
+                  ><svg class="icon">
+                    <use href="/img/sprite.svg#"></use>
+                  </svg>
+                </botton>
+              </li>
+              <li>
+                <botton class="meta"
+                  ><svg class="icon">
+                    <use href="/img/sprite.svg#"></use>
+                  </svg>
+                </botton>
+              </li>
