--- a/index.html
+++ b/index.html
@@ -177,12 +177,54 @@
           <div class="conteiner regular_conteiner">
             <h2 class="customers">Постійні клієнти</h2>
             <ul class="list cust_link">
-              <li class="meta">
-                <a href="" class="icon">
-                  <svg>
-                    <use href="./img/symbol-defs.svg#icon-at-symbol"></use>
+              <li>
+                <a href="">
+                  <svg class="icon">
+                    <use href="./img/symbol-defs.svg#icon-instagram-2"></use>
                   </svg>
                 </a>
+              </li>
+              <li>
+                <botton class="meta">
+                  <svg class="icon">
+                    <use href=""></use>
+                  </svg>
+                </botton>
+              </li>
+              <li>
+                <botton class="meta"
+                  ><svg class="icon">
+                    <use href="./img/symbol-defs.svg#icon-twitter-1"></use>
+                  </svg>
+                </botton>
+              </li>
+              <li>
+                <botton class="meta"
+                  ><svg class="icon">
+                    <use href="/img/symbol-defs.svg#icon-twitter-1"></use>
+                  </svg>
+                </botton>
+              </li>
+              <li>
+                <botton class="meta"
+                  ><svg class="icon">
+                    <use xlink:href="./img/symbol-defs.svg#icon-twitter-1"></use>
+                  </svg>
+                </botton>
+              </li>
+              <li>
+                <botton class="meta"
+                  ><svg class="icon">
+                    <use href=""></use>
+                  </svg>
+                </botton>
+              </li>
+              <li>
+                <botton class="meta"
+                  ><svg class="icon">
+                    <use href=""></use>
+                  </svg>
+                </botton>
               </li>
             </ul>
           </div>
