--- a/index.html
+++ b/index.html
@@ -178,51 +178,45 @@
             <h2 class="customers">Постійні клієнти</h2>
             <ul class="list cust_link">
               <li>
-                <a href="">
-                  <svg class="icon">
-                    <use href="./img/symbol-defs.svg#icon-instagram-2"></use>
-                  </svg>
-                </a>
-              </li>
-              <li>
                 <botton class="meta">
                   <svg class="icon">
-                    <use href=""></use>
+                    <use href="./img/icons.svg#icon-Union"></use>
                   </svg>
                 </botton>
               </li>
               <li>
                 <botton class="meta"
                   ><svg class="icon">
-                    <use href="./img/symbol-defs.svg#icon-twitter-1"></use>
+                    <use href="./img/icons.svg#icon-group"></use>
                   </svg>
                 </botton>
               </li>
               <li>
                 <botton class="meta"
                   ><svg class="icon">
-                    <use href="/img/symbol-defs.svg#icon-twitter-1"></use>
+                    <use href="./img/icons.svg#icon-Object"></use>
                   </svg>
                 </botton>
               </li>
               <li>
                 <botton class="meta"
                   ><svg class="icon">
-                    <use xlink:href="./img/symbol-defs.svg#icon-twitter-1"></use>
+                    <use href="./img/icons.svg#icon-group-1"
+                    ></use>
                   </svg>
                 </botton>
               </li>
               <li>
                 <botton class="meta"
                   ><svg class="icon">
-                    <use href=""></use>
+                    <use href="./img/icons.svg#icon-group-2"></use>
                   </svg>
                 </botton>
               </li>
               <li>
                 <botton class="meta"
                   ><svg class="icon">
-                    <use href=""></use>
+                    <use href="./img/icons.svg#icon-Object-1"></use>
                   </svg>
                 </botton>
               </li>
