--- a/index.html
+++ b/index.html
@@ -187,22 +187,21 @@
               <li>
                 <botton class="meta"
                   ><svg class="icon">
-                    <use href="./img/icons.svg#icon-group"></use>
+                    <use href="./img/icons.svg#icon-smartphone"></use>
                   </svg>
                 </botton>
               </li>
               <li>
                 <botton class="meta"
                   ><svg class="icon">
-                    <use href="./img/icons.svg#icon-Object"></use>
+                    <use href="./img/icons.svg#icon-facebook-1"></use>
                   </svg>
                 </botton>
               </li>
               <li>
                 <botton class="meta"
                   ><svg class="icon">
-                    <use href="./img/icons.svg#icon-group-1"
-                    ></use>
+                    <use href="./img/icons.svg#icon-group-1"></use>
                   </svg>
                 </botton>
               </li>
