--- a/index.html
+++ b/index.html
@@ -177,42 +177,42 @@
           <div class="conteiner regular_conteiner">
             <h2 class="customers">Постійні клієнти</h2>
             <ul class="list cust_link">
-              <li>
+              <li class="dfg">
                 <botton class="meta">
                   <svg class="icon">
                     <use href="./img/icons.svg#icon-Union"></use>
                   </svg>
                 </botton>
               </li>
-              <li>
+              <li class="dfg">
                 <botton class="meta"
                   ><svg class="icon">
                     <use href="./img/icons.svg#icon-group"></use>
                   </svg>
                 </botton>
               </li>
-              <li>
+              <li class="dfg">
                 <botton class="meta"
                   ><svg class="icon">
                     <use href="./img/icons.svg#icon-Object"></use>
                   </svg>
                 </botton>
               </li>
-              <li>
+              <li class="dfg">
                 <botton class="meta"
                   ><svg class="icon">
                     <use href="./img/icons.svg#icon-group-1"></use>
                   </svg>
                 </botton>
               </li>
-              <li>
+              <li class="dfg">
                 <botton class="meta"
                   ><svg class="icon">
                     <use href="./img/icons.svg#icon-group-2"></use>
                   </svg>
                 </botton>
               </li>
-              <li>
+              <li class="dfg">
                 <botton class="meta"
                   ><svg class="icon">
                     <use href="./img/icons.svg#icon-Object-1"></use>
