--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
     />
     <link rel="stylesheet" href="./Styles/styles.css" />
+    <link rel="stylesheet" href="./Styles/icons.css">
+    <script
+      src="https://kit.fontawesome.com/6a919ebcfb.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Web studio</title>
   </head>
   <body class="body">
@@ -180,7 +185,7 @@
               <li class="dfg">
                 <botton class="meta">
                   <svg class="icon">
-                    <use href="./img/icons.svg#icon-Union"></use>
+                    <use href="///img/icons.svg#icon-Union"></use>
                   </svg>
                 </botton>
               </li>
