--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
     />
     <link rel="stylesheet" href="./Styles/styles.css" />
-    <link rel="stylesheet" href="./Styles/icons.css">
+    <link rel="stylesheet" href="./Styles/icons.css" />
     <script
       src="https://kit.fontawesome.com/6a919ebcfb.js"
       crossorigin="anonymous"
@@ -144,6 +144,40 @@
               />
               <h3 class="name">Ігор Дем'яненко</h3>
               <p class="team_work">Product Designer</p>
+              <ul class="social-icon">
+                <li class="social-item">
+                  <a href="" class="social-link">
+                    <svg class="icon" width="20" height="20">
+                      <use href="./img/icons.svg#icon-instagram-2"></use>
+                      >
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-item">
+                  <a href="" class="social-link">
+                    <svg class="icon" width="20" height="20">
+                      <use href="./img/icons.svg#icon-twitter-1"></use>
+                      >
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-item">
+                  <a href="" class="social-link">
+                    <svg class="icon" width="20" height="20">
+                      <use href="./img/icons.svg#icon-facebook-1"></use>
+                      >
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-item">
+                  <a href="" class="social-link">
+                    <svg class="icon" width="20" height="20">
+                      <use href="./img/icons.svg#icon-linkedin-1"></use>
+                      >
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </li>
             <li class="team_img">
               <img
@@ -154,6 +188,40 @@
               />
               <h3 class="name">Ольга Рєпіна</h3>
               <p class="team_work">Frontend Developer</p>
+              <ul class="social-icon">
+                <li class="social-item">
+                  <a href="" class="social-link">
+                    <svg class="icon" width="20" height="20">
+                      <use href="./img/icons.svg#icon-instagram-2"></use>
+                      >
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-item">
+                  <a href="" class="social-link">
+                    <svg class="icon" width="20" height="20">
+                      <use href="./img/icons.svg#icon-twitter-1"></use>
+                      >
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-item">
+                  <a href="" class="social-link">
+                    <svg class="icon" width="20" height="20">
+                      <use href="./img/icons.svg#icon-facebook-1"></use>
+                      >
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-item">
+                  <a href="" class="social-link">
+                    <svg class="icon" width="20" height="20">
+                      <use href="./img/icons.svg#icon-linkedin-1"></use>
+                      >
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </li>
             <li class="team_img">
               <img
@@ -164,6 +232,40 @@
               />
               <h3 class="name">Микола Тарасов</h3>
               <p class="team_work">Marketing</p>
+              <ul class="social-icon">
+                <li class="social-item">
+                  <a href="" class="social-link">
+                    <svg class="icon" width="20" height="20">
+                      <use href="./img/icons.svg#icon-instagram-2"></use>
+                      >
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-item">
+                  <a href="" class="social-link">
+                    <svg class="icon" width="20" height="20">
+                      <use href="./img/icons.svg#icon-twitter-1"></use>
+                      >
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-item">
+                  <a href="" class="social-link">
+                    <svg class="icon" width="20" height="20">
+                      <use href="./img/icons.svg#icon-facebook-1"></use>
+                      >
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-item">
+                  <a href="" class="social-link">
+                    <svg class="icon" width="20" height="20">
+                      <use href="./img/icons.svg#icon-linkedin-1"></use>
+                      >
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </li>
             <li class="team_img">
               <img
@@ -174,6 +276,40 @@
               />
               <h3 class="name">Михайло Єрмаков</h3>
               <p class="team_work">UI Designer</p>
+              <ul class="social-icon">
+                <li class="social-item">
+                  <a href="" class="social-link">
+                    <svg class="icon" width="20" height="20">
+                      <use href="./img/icons.svg#icon-instagram-2"></use>
+                      >
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-item">
+                  <a href="" class="social-link">
+                    <svg class="icon" width="20" height="20">
+                      <use href="./img/icons.svg#icon-twitter-1"></use>
+                      >
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-item">
+                  <a href="" class="social-link">
+                    <svg class="icon" width="20" height="20">
+                      <use href="./img/icons.svg#icon-facebook-1"></use>
+                      >
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-item">
+                  <a href="" class="social-link">
+                    <svg class="icon" width="20" height="20">
+                      <use href="./img/icons.svg#icon-linkedin-1"></use>
+                      >
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </li>
           </ul>
         </div>
@@ -185,7 +321,7 @@
               <li class="dfg">
                 <botton class="meta">
                   <svg class="icon">
-                    <use href="///img/icons.svg#icon-Union"></use>
+                    <use href="./img/icons.svg#icon-Union"></use>
                   </svg>
                 </botton>
               </li>
