--- a/index.html
+++ b/index.html
@@ -84,6 +84,10 @@
         <div class="conteiner">
           <ul class="description">
             <li class="description_title">
+              <svg class="disc_img" width="270" height="120">
+                <use href="./img/icons.svg#icon-antenna-1">
+                </use>
+              </svg>
               <h3 class="description-list">УВАГА ДО ДЕТАЛЕЙ</h3>
               <p class="coment">
                 Ідейні міркування, і навіть початок повсякденної роботи з
@@ -91,6 +95,10 @@
               </p>
             </li>
             <li class="description_title">
+              <svg class="disc_img" width="270" height="120">
+                <use href="./img/icons.svg#icon-clock-1">
+                </use>
+              </svg>
               <h3 class="description-list">ПУНКТУАЛЬНІСТЬ</h3>
               <p class="coment">
                 Завдання організації, особливо рамки і місце навчання кадрів
@@ -98,12 +106,20 @@
               </p>
             </li>
             <li class="description_title">
+              <svg class="disc_img" width="270" height="120">
+                <use href="./img/icons.svg#icon-diagram-1">
+                </use>
+              </svg>
               <h3 class="description-list">ПЛАНУВАННЯ</h3>
               <p class="coment">
                 Так само консультація з широким активом значною мірою зумовлює.
               </p>
             </li>
             <li class="description_title">
+              <svg class="disc_img" width="270" height="120">
+                <use href="./img/icons.svg#icon-astronaut-1">
+                </use>
+              </svg>
               <h3 class="description-list">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
               <p class="coment">
                 Значимість цих проблем настільки очевидна, що реалізація
