--- a/index.html
+++ b/index.html
@@ -64,6 +64,10 @@
             >
           </li>
           <li class="item">
+            <svg class="item_svg">
+              <use href="./img/icons.svg#icon-smartphone">
+              </use>
+            </svg>
             <a class="tel" href="tel:+380961111111">+380 96 111 11 11</a>
           </li>
         </ul>
