--- a/index.html
+++ b/index.html
@@ -65,8 +65,7 @@
           </li>
           <li class="item">
             <svg class="item_svg">
-              <use href="./img/icons.svg#icon-smartphone">
-              </use>
+              <use href="./img/icons.svg#icon-smartphone"></use>
             </svg>
             <a class="tel" href="tel:+380961111111">+380 96 111 11 11</a>
           </li>
@@ -89,8 +88,7 @@
           <ul class="description">
             <li class="description_title">
               <svg class="disc_img" width="270" height="120">
-                <use href="./img/icons.svg#icon-antenna-1">
-                </use>
+                <use href="./img/icons.svg#icon-antenna-1"></use>
               </svg>
               <h3 class="description-list">УВАГА ДО ДЕТАЛЕЙ</h3>
               <p class="coment">
@@ -100,8 +98,7 @@
             </li>
             <li class="description_title">
               <svg class="disc_img" width="270" height="120">
-                <use href="./img/icons.svg#icon-clock-1">
-                </use>
+                <use href="./img/icons.svg#icon-clock-1"></use>
               </svg>
               <h3 class="description-list">ПУНКТУАЛЬНІСТЬ</h3>
               <p class="coment">
@@ -111,8 +108,7 @@
             </li>
             <li class="description_title">
               <svg class="disc_img" width="270" height="120">
-                <use href="./img/icons.svg#icon-diagram-1">
-                </use>
+                <use href="./img/icons.svg#icon-diagram-1"></use>
               </svg>
               <h3 class="description-list">ПЛАНУВАННЯ</h3>
               <p class="coment">
@@ -121,8 +117,7 @@
             </li>
             <li class="description_title">
               <svg class="disc_img" width="270" height="120">
-                <use href="./img/icons.svg#icon-astronaut-1">
-                </use>
+                <use href="./img/icons.svg#icon-astronaut-1"></use>
               </svg>
               <h3 class="description-list">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
               <p class="coment">
