--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
         <!--Top Line-->
         <ul class="out_list list">
           <li class="item">
+            <svg class="item_svg">
+              <use href="./img/icons.svg#icon-envelope"></use>
+            </svg>
             <a
               class="mail"
               href="mailto:info@devstudio.com"
