--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
               ><svg class="envelope" width="16" height="12">
                 <use href="./img/icons.svg#icon-envelope"></use>
               </svg>
-              <span style="vertical-align: inherit">info@devstudio.com</span>
+              info@devstudio.com
             </a>
           </li>
           <li class="item">
@@ -71,7 +71,7 @@
               <svg class="smartphone" width="10" height="16">
                 <use href="./img/icons.svg#icon-smartphone"></use>
               </svg>
-              <span>+380 96 111 11 11</span></a
+              +380 96 111 11 11</a
             >
           </li>
         </ul>
