--- a/portfolio.html
+++ b/portfolio.html
@@ -61,7 +61,7 @@
               <span style="vertical-align: inherit">info@devstudio.com</span>
             </a>
           </li>
-          <li class="item">
+          <li class="mail">
             <a class="tel" href="tel:+380961111111">
               <svg class="smartphone" width="10" height="16">
                 <use href="./img/icons.svg#icon-smartphone"></use>
