--- a/portfolio.html
+++ b/portfolio.html
@@ -58,20 +58,19 @@
               ><svg class="envelope" width="16" height="12">
                 <use href="./img/icons.svg#icon-envelope"></use>
               </svg>
-              <span style="vertical-align: inherit">info@devstudio.com</span>
+              info@devstudio.com
             </a>
           </li>
-          <li class="mail">
+          <li class="item">
             <a class="tel" href="tel:+380961111111">
               <svg class="smartphone" width="10" height="16">
                 <use href="./img/icons.svg#icon-smartphone"></use>
               </svg>
-              <span>+380 96 111 11 11</span></a
+              +380 96 111 11 11</a
             >
           </li>
         </ul>
       </div>
-    </header>
     </header>
     <hr class="line" />
     <!--Section Portfolio-->
@@ -204,7 +203,7 @@
       </div>
     </section>
     <!-- Footer -->
-   <footer class="footer">
+    <footer class="footer">
       <div class="conteiner conteiner_footer">
         <div class="aaa">
           <a
